# logitechapplet

./: CMakeLists.txt  Doxyfile  LogitechApplet.kdevelop.filelist  LogitechApplet.kdevelop.pcs  ProjectHome.md  logitechapplet.kdevelop  logitechapplet.kdevses
src/: CMakeLists.txt  applet.qrc  applet.xml  appletsettings.kcfgc  generalsettingswidget.h  generalsettingswidget.ui  logitechapplet.cpp  logitechapplet.desktop  logitechapplet.h  logitechapplet.qrc  logitechapplet.ui  logitechg15clock.cpp  logitechwidget.cpp  logitechwidget.h  logitechwidget.ui  main.cpp
src/icons/: CMakeLists.txt
src/pics/: CMakeLists.txt
src/plugins/: CMakeLists.txt
templates/: h
trunk/: CMakeLists.txt  LogitechApplet.kdevelop.pcs  logitechapplet.kdevelop  logitechapplet.kdevses
trunk/cmake/: FindDBUS.cmake  FindLibG15.cmake
trunk/src/: CMakeLists.txt  applet.qrc  applet.xml  applet_interface.cpp  applet_interface.h  appletsettings.kcfg  application.cpp  application.h  generalsettingswidget.cpp  generalsettingswidget.ui  logitechapplet.cpp  logitechapplet.desktop  logitechapplet.h  logitechapplet.ui  logitechapplet.xml  logitechappletui.rc  logitechg15clock.h  logitechg15pluginwidget.cpp  logitechg15pluginwidget.h  logitechg15pluginwidget.ui  logitechwidget.cpp  logitechwidget.h  logitechwidget.ui  main.cpp  mouse.cpp  mouse.h
trunk/src/icons/: CMakeLists.txt
trunk/src/images/: CMakeLists.txt
trunk/src/pics/: CMakeLists.txt
trunk/src/plugins/: clockplugin.cpp  clockplugin.h  logitechg15plugin.cpp  logitechg15plugin.h
