ADD_SUBDIRECTORY( icons )
ADD_SUBDIRECTORY( pics )
FIND_PACKAGE( DBUS REQUIRED )
INCLUDE_DIRECTORIES(${KDE4_INCLUDES} ${QT_INCLUDES} ${QT_DBUS_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} )
SET( SRC generalsettingswidget.cpp logitechapplet.cpp logitechwidget.cpp main.cpp )
SET( UI_SRC logitechwidget.ui generalsettingswidget.ui )
SET( DBUSXML logitechapplet.xml )
QT4_ADD_DBUS_INTERFACE( SRC ${DBUSXML} logitechappletinterface LogitechApplet )
# QT4_ADD_RESOURCES( SRC logitechapplet.qrc )
KDE4_ADD_UI_FILES( SRC ${UI_SRC} )
KDE4_ADD_KCFG_FILES( SRC appletsettings.kcfgc )
ADD_DEFINITIONS( ${KDE4_DEFINITIONS} ${QT_DEFINITIONS} )
KDE4_ADD_EXECUTABLE( logitechapplet ${SRC} )
TARGET_LINK_LIBRARIES( logitechapplet ${KDE4_KDEUI_LIBS} ${KDE4_KDECORE_LIBS} ${QT_QTDBUS_LIBRARY} )
INSTALL( TARGETS logitechapplet RUNTIME DESTINATION ${KDE4_BIN_INSTALL_DIR} )
INSTALL( FILES logitechapplet.desktop DESTINATION ${KDE4_XDG_APPS_INSTALL_DIR} )
INSTALL( FILES logitechappletui.rc DESTINATION ${DATA_INSTALL_DIR}/logitechapplet )
