INSTALL( FILES logitech.png DESTINATION ${DATA_INSTALL_DIR}/logitechapplet/icons/hicolor/48x48/apps )
INSTALL( FILES logitechapplet.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/48x48/apps )
INSTALL( FILES logitechapplet_large.png DESTINATION ${ICON_INSTALL_DIR}/hicolor/128x128/apps RENAME logitechapplet.png )