INCLUDE_DIRECTORIES(${KDE4_INCLUDES} ${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} )
ADD_DEFINITIONS( ${KDE4_DEFINITIONS} ${QT_DEFINITIONS} )
#SET( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/src/plugins )
SET( PLUGINLIBSRC logitechg15plugin.cpp )
SET( CLOCKSRC clockplugin.cpp )
QT4_AUTOMOC( ${PLUGINLIBSRC} )
KDE4_ADD_LIBRARY( logitechg15plugin SHARED ${PLUGINLIBSRC} )
SET_TARGET_PROPERTIES( logitechg15plugin PROPERTIES PREFIX "" )
KDE4_ADD_PLUGIN( clockplugin ${CLOCKSRC} logitechg15plugin )
TARGET_LINK_LIBRARIES( logitechg15plugin ${KDE4_KDECORE_LIBS} )
TARGET_LINK_LIBRARIES( clockplugin ${KDE4_KDECORE_LIBS} )
INSTALL( TARGETS logitechg15plugin LIBRARY DESTINATION ${KDE4_LIB_DIR} )
INSTALL( TARGETS clockplugin LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR}/logitechg15applet )
INSTALL( FILES logitechg15plugin.h DESTINATION /usr/include/logitechg15applet )
