FIND_PACKAGE( Qt4 REQUIRED )
FIND_PACKAGE( DBUS REQUIRED )
INCLUDE_DIRECTORIES( ${QT_INCLUDES}
					${DBUS_QT4_INCLUDE_DIR}
					${QT_GUI_INCLUDE_DIR}
					${CMAKE_CURRENT_BINARY_DIR}
					${CMAKE_CURRENT_SOURCE_DIR} )
SET( SRC main.cpp logitechapplet.cpp applet_interface.cpp )
SET( UI_SRC logitechapplet.ui )
QT4_WRAP_UI( UI_SRC_H ${UI_SRC} )
QT4_AUTOMOC( ${SRC} )
ADD_DEFINITIONS( ${QT_DEFINITIONS} )
ADD_EXECUTABLE( logitechapplet ${SRC} ${UI_SRC_H} )
TARGET_LINK_LIBRARIES( logitechapplet ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${DBUS_QT4_LIBRARY} )
